    \item Legend option for jakcknife added to plot.smacofJK().
    \item In smacofConstraint() "linear" constraint changed to "unrestricted".
    \item In unfolding() "matrix" changed to "unconditional". 
    \item omega default in unfolding() set to 1. 
    \item Guttman datasets added (Guttman1965, Guttman1991). 
    \item Second rectangle dataset added (area-shape). 
    \item svm_mdsplot() added for facet plotting based on SVM fit. 
    }
}


\section{Changes in Version 2.0-0}{
  \itemize{
    \item Color shading added to plot.icexplore().
    \item Fixed column coordinates version of vmu() implemented. 
    \item Vignette added.
    \item Help files for indvalues and PVQ40 data updated.
    \item method.dat = "rows" as default in permtest.smacofR(). 
    }
}

\section{Changes in Version 1.13-1}{
  \itemize{
    \item Slight acceleration in unfolding when using transformations.
    }
}

\section{Changes in Version 1.13-0}{
  \itemize{
    \item Pseudo-confidence ellipses added via confEllipse().
    \item Inverse MDS removed because it was buggy. Will be added later on again. 
    }
}

\section{Changes in Version 1.12-1}{
  \itemize{
    \item Extra sanity check added for fixed coordinates in unfolding added.
    \item Parallelization is added for rowconditional unfolding.
    }
}


\section{Changes in Version 1.12-0}{
  \itemize{
    \item External unfolding added.
    \item In case of NA's, proper weight matrix is created in unfolding.
    \item Vector unfolding model added. 
    }
}

\section{Changes in Version 1.11-0}{
  \itemize{
    \item Circular unfolding for all unfolding versions implemented.
    }
}

\section{Changes in Version 1.10-8}{
  \itemize{
    \item variable names in morsescales corrected.
    \item adjust argument in plot.driftvec added.
    }
}

\section{Changes in Version 1.10-7}{
  \itemize{
    \item sanity check in smacofConstraint for diagonal C. 
    \item stability coefficient for bootstrap added. 
    }
}
